# helix_3d_render_prototype

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  HALL_OF_HEROES.md  HANDOFF.md  Makefile  README.md  run.sh  rust-toolchain.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: translation_lead.md  translation_request.md
.github/workflows/: ci.yml
docs/: APPRENTICE_AI_GUIDE.md  APPRENTICE_TRANSFORMS.md  DEV_DECISIONS.md  DEV_DRY_RUN_GUIDE.md  DEV_NATIVE_SETUP.md  DEV_SKELETON_DEEP_DIVE.md  DEV_STREAM_REVIEW_GUIDE.md  DEV_TROUBLESHOOTING.md  DEV_WIREFRAME_THOUGHTS.md  MISSION_CONTROL_LESSON_1.md  MISSION_CONTROL_LESSON_2.md  MISSION_CONTROL_LESSON_3.md  MISSION_CONTROL_LESSON_4.md  TEAMS_START_HERE.md  TEAMV_LESSON_1_SIGNING_OFF.md  TEAMV_LESSON_2_CLOUD_LAB.md  TEAMV_LESSON_3_TALKING_TO_CLOUD.md  TEAMV_LESSON_4_FIRST_3D_PICTURE.md  TEAMV_LESSON_5_COLOR_ALCHEMIST.md  TEAMV_LESSON_6_ROTATION_MASTER.md  TEAMV_START_HERE.md  TEAM_COMMUNICATION.md  TEAM_LESSON_CREATION_WORKFLOW.md  TEAM_MATRIX.md  TRANSLATIONS.md  TRANSLATION_STYLE_GUIDE.md  animation_indices.md
docs/en/: CLI_USAGE.md  LOGGING.md  README.md  TROUBLESHOOTING.md
docs/fr/: CONTRIBUTING.md  README.md  STATUS.md
docs/pt-BR/: CONTRIBUTING.md  README.md  STATUS.md
docs/ru/: CONTRIBUTING.md  README.md  (+1 more)
scripts/: check-deps.sh  check-gpu.sh  kill-ports.sh  regression-test.sh  run-x11.sh  setup.sh  validate-assets.sh
src/: cli.rs  components.rs  constants.rs  egui_panel.rs  main.rs
tests/: build_test.rs  integration_test.rs  regression_test.rs
(+127 files in other folders)
